--- a/Ubuntu-Vagrant/Vagrantfile
+++ b/Ubuntu-Vagrant/Vagrantfile
@@ -5,7 +5,7 @@ Vagrant.configure("2") do |config|
     v.gui = true
     v.memory = 8192
   end
-  
+
   # Currently "ubuntu/bionic64" on VirtualBox requires `type: "virtualbox"`
   # to make synced folder works.
   config.vm.synced_folder ".", "/vagrant", type: "virtualbox"
@@ -34,11 +34,10 @@ Vagrant.configure("2") do |config|
 
   # Add Firefox
   config.vm.provision :shell, inline: "sudo apt install -y firefox"
-  
-  # Add & Install TeamViewer
-  config.vm.provision :shell, inline: "sudo apt-get install -y wget"
-  config.vm.provision :shell, inline: "wget https://download.teamviewer.com/download/linux/teamviewer_amd64.deb"
-  config.vm.provision :shell, inline: "sudo apt install ./teamviewer_amd64.deb"
+
+  # Add Japanese support
+  config.vm.provision :shell, inline: "sudo apt install -y fcitx-mozc"
+  config.vm.provision :shell, inline: "sudo apt install -y fonts-noto"
 
   # Restart
   config.vm.provision :shell, inline: "sudo shutdown -r now"
